# reddit-place-script-2022

./: .env  .flake8  .gitignore  Dockerfile  README.md  Test  config.json  config_example.json  env2config.py  main.py  mappings.py  noxfile.py  pyproject.toml  requirements.txt  start.bat  start.sh  startverbose.bat  startverbose.sh  workers_example.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  nox.yml
docs/: CONTRIBUTING.md
src/: mappings.py  proxy.py  utils.py
tests/: test_mappings.py  test_utils.py
tor/Tor/: torrc
