[tool.poetry]
name = "reddit-place-script-2022"
version = "1.0.0"
description = "A python bot for automatically placing images in r/place"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "reddit_place_script_2022"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
colorama = "^0.4.4"
Pillow = "^9.1.0"
urllib3 = "^1.26.9"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.12"
idna = "^3.3"
python-dotenv = "^0.20.0"
websocket-client = "^1.3.2"
loguru = "^0.6.0"
click = "^8.1.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
